# SGH-Master-Thesis

./: .gitignore  .pracamgr.cls.swp  .travis.yml  .travis.yml.swo  .travis.yml.swp  README.md  run.sh  travisBuildSGH.sh  travisRunSGH.sh
SGH-Master-Thesis/: .gitignore  .haha.swp  chartHeston.txt  config.dev.ini  config.ini  haha  latex.sh  simulation.sh  text.txt
SGH-Master-Thesis/data/: .usdrub1995.csv.swp  .usdrub_d.csv.swo  .usdrub_d.csv.swp  .~lock.usdrub1995.xlsx#  .~lock.volatilitySurface.csv#  usdrub.xlsx  usdrub1995.csv  usdrub_d.csv  usdrub_d.xls  volatilitySurface.csv  volatilitySurface.ods
SGH-Master-Thesis/data/CalibrationInput/: ThesisDataClean.csv  ThesisDataClean.ods  ThesisDataClean1.csv  ThesisDataClean2.csv
SGH-Master-Thesis/input/: optionInput.txt
SGH-Master-Thesis/input/data/: .~lock.usdrub.xlsx#  1  usdrub1995.xlsx  usdrub1995fix.xlsx  usdrubXLS.xlsx  usdrub_d.xlsx  volatilitySurface.xls
SGH-Master-Thesis/input/inputcpp/: input.json
SGH-Master-Thesis/praca/: .run.sh.swl  .run.sh.swm  .run.sh.swn  .run.sh.swo  .run.sh.swp  biblio.bib  corr.py  links.txt  masterSGH.tex  masterThesisSGH.tex  mgr.tex  pracamgr.cls  run.sh
SGH-Master-Thesis/praca/listings/: lsqnonlin.m  sa.cpp  sa.py
SGH-Master-Thesis/sgh_symulacje/: lab2.xlsx
SGH-Master-Thesis/sgh_symulacje/egzamin symulacje/: kl48211 Konrad Lisiecki egzamin symulacje.xlsx  kl48211 Konrad Lisiecki egzamin symulacje1.xlsx  kl48211 Konrad Lisiecki egzamin symulacje2.xlsx  kl48211 Konrad Lisiecki egzamin symulacje3.xlsx
SGH-Master-Thesis/sgh_symulacje/lab1/: Zajecia nr 1.xlsx
SGH-Master-Thesis/src/: config.ini
SGH-Master-Thesis/src/HestonCPP/: .gitignore  CMakeLists.txt  build.sh  config.dev.ini  impVol.txt  inputcpp  main.cpp  run.sh  start.sh
SGH-Master-Thesis/src/HestonCPP/ext/gtest/: CMakeLists.txt
SGH-Master-Thesis/src/HestonCPP/ext/gtest/tmp.old/: googletest-cfgcmd.txt  googletest-gitclone.cmake  googletest-gitupdate.cmake
SGH-Master-Thesis/src/HestonCPP/src/main/: CMakeLists.txt
SGH-Master-Thesis/src/HestonCPP/src/main/cpp/bs/: BlackScholesAnalytic.cpp  MCBlackScholes.cpp  MCBlackScholes.h
SGH-Master-Thesis/src/HestonCPP/src/main/cpp/config/: config.cpp  config.h
SGH-Master-Thesis/src/HestonCPP/src/main/cpp/correlated/: correlated_snd.h
SGH-Master-Thesis/src/HestonCPP/src/main/cpp/heston/header/: Heston.h  HestonAndersen.h  HestonAndersenMartingale.h  HestonEuler.h  HestonExact.h  HestonExactLittleTrap.h  HestonMC.h
SGH-Master-Thesis/src/HestonCPP/src/main/cpp/heston/src/: Heston.cpp  HestonAndersen.cpp  HestonAndersenMartingale.cpp  HestonEuler.cpp  HestonExact.cpp  HestonExactLittleTrap.cpp  HestonMC.cpp
SGH-Master-Thesis/src/HestonCPP/src/main/cpp/mc/: MonteCarloSimulation.cpp  MonteCarloSimulation.h
SGH-Master-Thesis/src/HestonCPP/src/main/cpp/option/: option.cpp  option.h
SGH-Master-Thesis/src/HestonCPP/src/main/cpp/payoff/: payoff.h
SGH-Master-Thesis/src/HestonCPP/src/main/cpp/random/: PolarGenerator.cpp  PolarGenerator.h
SGH-Master-Thesis/src/HestonCPP/src/main/cpp/simulation/: Simulation.cpp  Simulation.h
SGH-Master-Thesis/src/HestonCPP/src/main/cpp/statistics/: BasicStatistics.cpp  BasicStatistics.h  StatisticalDistribution.cpp
SGH-Master-Thesis/src/HestonCPP/src/main/cpp/tools/config/: Config.cpp  Config.h
SGH-Master-Thesis/src/HestonCPP/src/main/cpp/tools/json/: JsonReader.cpp  JsonReader.h
SGH-Master-Thesis/src/HestonCPP/src/main/cpp/tools/output/: OutputAndConsole.cpp  OutputAndConsole.h
SGH-Master-Thesis/src/HestonCPP/src/main/cpp/volatilitysmile/: VolatilitySmile.cpp  VolatilitySmile.h
SGH-Master-Thesis/src/HestonCPP/src/test/: CMakeLists.txt
SGH-Master-Thesis/src/HestonCPP/src/test/cpp/config/: ConfigTest.cpp  config.ini
SGH-Master-Thesis/src/cpp/: Makefile  (+1 more)
SGH-Master-Thesis/src/heston/: .CMakeCache.txt.swp  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  correlated_snd.h  heston  heston_mc.cpp  heston_mc.h  impVol.txt  main.cpp  option.cpp  option.h  payoff.h  run.sh  statistics.h
SGH-Master-Thesis/src/heston/HestonModel/header/: Heston.h  HestonAndersen.h  HestonEuler.h
SGH-Master-Thesis/src/heston/HestonModel/src/: Heston.cpp  HestonAndersen.cpp  HestonEuler.cpp
SGH-Master-Thesis/src/heston/Main/: main.cpp
SGH-Master-Thesis/src/heston/MonteCarlo/: MCHeston.cpp  MCHeston.h  MonteCarloSimulation.cpp  MonteCarloSimulation.h
SGH-Master-Thesis/src/heston/OrderBook/: Operation.h  Order.cpp  Order.h  OrderBook.cpp  OrderBook.h
SGH-Master-Thesis/src/heston/Oxam/: main.cpp
SGH-Master-Thesis/src/heston/SimpleMonteCarlo/: BoxMuller.cpp  BoxMuller.h  MCBlackScholes.cpp  MCBlackScholes.h  PolarGenerator.cpp  PolarGenerator.h
SGH-Master-Thesis/src/heston/SimulatedAnnealing/: SimulatedAnnealing.cpp  SimulatedAnnealing.h
SGH-Master-Thesis/src/heston/input/: input.json
SGH-Master-Thesis/src/heston/python/: hestonCall.py
SGH-Master-Thesis/src/heston/src/main/cpp/bs/: BlackScholesAnalytic.h  MCBlackScholes.cpp  MCBlackScholes.h
SGH-Master-Thesis/src/heston/src/main/cpp/correlated/: correlated_snd.cpp  correlated_snd.h
SGH-Master-Thesis/src/heston/src/main/cpp/heston/header/: Heston.h  HestonAndersen.h  HestonAndersenMartingale.h  HestonEuler.h  HestonExact.h  HestonMC.h
SGH-Master-Thesis/src/heston/src/main/cpp/heston/src/: Heston.cpp  HestonAndersen.cpp  HestonAndersenMartingale.cpp  HestonEuler.cpp  HestonExact.cpp  HestonMC.cpp
SGH-Master-Thesis/src/heston/src/main/cpp/mc/: MonteCarloSimulation.cpp  MonteCarloSimulation.h
SGH-Master-Thesis/src/heston/src/main/cpp/option/: option.cpp  option.h
SGH-Master-Thesis/src/heston/src/main/cpp/payoff/: payoff.cpp
SGH-Master-Thesis/src/heston/src/main/cpp/statistics/: statistics.cpp
SGH-Master-Thesis/src/heston/unittest/: main.cpp
UW-Master-Thesis/: .gitignore  eff.sh
UW-Master-Thesis/praca/: .uw.tex.swp  accumulate.cpp  corr.py  firstCategory.cpp  lambda1.cpp  mgr.tex  mgr2.tex  pracamgr.cls  run.sh  uw.tex
UW-Master-Thesis/src/: Makefile
UW-Master-Thesis/src/LinqCPP/: CMakeLists.txt  build.sh
UW-Master-Thesis/src/LinqCPP/ext/gtest/: CMakeLists.txt
(+68 files in other folders)
